cluster/queenbee/backend/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin-api
  name: admin-api
  namespace: queenbee
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: admin-api
  template:
    metadata:
      labels:
        app: admin-api
    spec:
      imagePullSecrets:
        - name: gitlab-api-pull-token
      containers:
        - image: registry.login.no/tekkom/web/beehive/admin-api:1.0.2@sha256:bb7b7216b7f5ff1f4da8e6cd0b1cc725a96c2a2213b7bc23f10847c3d45f9b11
          imagePullPolicy: Always
          name: admin-api
          ports:
            - containerPort: 8080
              name: 8080tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tls-certs
              readOnly: true
              mountPath: "/tls"
        - name: redis
          image: redis:7.4.1-alpine3.20@sha256:de13e74e14b98eb96bdf886791ae47686c3c5d29f9d5f85ea55206843e3fce26
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: 6379tcp
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - admin-api
                topologyKey: kubernetes.io/hostname

      volumes:
        - name: tls-certs
          secret:
            secretName: backend-self-signed
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
