cluster/queenbee/backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admin-api
  namespace: queenbee
  labels:
    app: admin-api
spec:
  type: ClusterIP
  selector:
    app: admin-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
