cluster/queenbee/backend/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admin-api-svc
  namespace: queenbee
  labels:
    app: admin-api
spec:
  type: ClusterIP
  selector:
    app: admin-api
  ports:
    - protocol: TCP
      port: 8080
      name: https
      targetPort: 8080
