cluster/queenbee/backend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: queenbee-backend-ingress
  namespace: queenbee
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-ntnu
  tls:
    - hosts:
        - queenbee-api.login.no
  rules:
    - host: queenbee-api.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: queenbee-api
                port:
                  number: 8080
